schedule_ui/src/components/calendar/calendar.scss
.calendar {
  position: sticky;
  top: 130px;
  background: #f2f3f2;
  font-size: 1.1rem;
  font-weight: 550;
  word-break: break-all;
  z-index: 1;

  &-operational {
    top: 60px;
    background: #e3f0ff;
  }

  &-cell {
    width: 35px;
    height: 35px;
    border: 1px solid #6c757d;

    &.fluid {
      width: 100%;
    }
  }
}

